--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,29 @@
 		</dependency>
 	</dependencies>
 
+    
+
 	<build>
 		<finalName>SpringBootHelloWorldExample</finalName>
+       
+
+        <plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<mainClass>org.arpit.java2blog.SpringBootHelloWorldApplication</mainClass>
+							<outputDirectory>${project.basedir}/docker</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+   
 	</build>
 </project>
